--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-jwt-verify": "^4.0.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
