--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "aws-jwt-verify": "^4.0.0",
     "axios": "^1.4.0",
-    "formidable": "^3.5.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-dropzone-uploader": "^2.11.0",
     "react-hook-form": "^7.45.4"
   }
